<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/login_destination">
    <fragment
        android:id="@+id/login_destination"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_destination_to_welcomeFragment2"
            app:destination="@id/welcome_destination"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/welcome_destination"
        android:name="com.udacity.shoestore.screens.onboard.WelcomeFragment"
        android:label="@string/welcome_screen_label"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_destination_to_instructionsFragment"
            app:destination="@id/instructions_destination"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/instructions_destination"
        android:name="com.udacity.shoestore.screens.instruction.InstructionsFragment"
        android:label="@string/instructions_screen_label">
        <action
            android:id="@+id/action_instructions_destination_to_shoeListFragment"
            app:destination="@id/shoe_List_destination"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/login_destination"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoe_List_destination"
        android:name="com.udacity.shoestore.screens.shoelist.ShoeListFragment"
        android:label="@string/shoe_list_screen_label">
        <action
            android:id="@+id/action_shoe_List_destination_to_detailsFragment"
            app:destination="@id/details_destination"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/details_destination"
        android:name="com.udacity.shoestore.screens.details.DetailsFragment"
        android:label="@string/details_screen_label">
        <action
            android:id="@+id/action_detailsFragment_to_shoe_List_destination"
            app:destination="@id/shoe_List_destination"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/shoe_List_destination"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>