<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Here ConstraintLayout is preferred since layout contains slightly complex layout of
     including TextViews. Constraint layout flattens the Hierarchy and hence
     it is chosen over LinearLayout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.onboard.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_text"
            style="@style/DashBoard_TextView_Style"
            android:text="@string/welcome_text"
            app:layout_constraintBottom_toTopOf="@+id/instruction_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summary_text"
            style="@style/DashBoard_Description_Style"
            android:text="@string/shoe_title_text"
            app:layout_constraintBottom_toTopOf="@+id/instruction_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/instruction_button"
            style="@style/Material_Button_Style"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>